# RAG-Demon

./: .gitignore  RAGDemon.py  README.md  chat_history.json  package-lock.json  requirements.txt  site_graph.graphml  test.txt
Backend/: .gitignore  pyproject.toml  requirements.txt
Backend/bedrock_impl/: pyproject.toml  requirements.txt
Backend/bedrock_impl/events/: event.json  session_test_event_2.json
Backend/bedrock_impl/src/: handler.py
Backend/bedrock_impl/src/bedrock_impl/: models.py
Backend/bedrock_impl/tests/unit/: bedrock_response.json  test_handler.py
Backend/langchain_impl/: pyproject.toml
Backend/langchain_impl/tests/: conftest.py  test_app_end_to_end_refusal.py  test_generate_prompt_filters.py  test_ragdemon.py  test_web_scrape.py
Backend/src/chat_data/: chat_history.json
Backend/src/ragdemon/: app.py  chunking.py  document_loader.py  parsing.py  server.py  vector_stores.py  web_scrape.py
Backend/src/ragdemon/lambda/: openapi.yaml  template.yaml
Backend/src/ragdemon/lambda/.aws-sam/: build.toml
Backend/src/ragdemon/lambda/ragdemon/: app.py  model.py
Backend/src/ragdemon/lambda/tests/unit/: test_handler.py
Backend/tests/: test_chunking.py  test_history.py  test_parsing.py  test_ragdemon.py  test_server.py  test_splitting.py  test_vector_stores.py  test_web_scrape.py
Frontend/: package-lock.json  package.json  postcss.config.js
backend/: .gitignore  openapi.yaml  requirements.txt  samconfig.toml  template.yaml
backend/bedrock_impl/: README.TOOLKIT.md  auth_test.sh  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
backend/bedrock_impl/.aws-sam/: build.toml
backend/bedrock_impl/events/: delete_conversation_event.json  get_conversations_event.json  get_messages_event.json
backend/bedrock_impl/scripts/: export_requirements.py
backend/bedrock_impl/src/: bedrock.py  handler.py  model.py  requirements.txt  store.py  test.py
backend/bedrock_impl/src/bedrock_impl/: bedrock.py  feedback_handler.py  handler.py  models.py  store.py  test_conversation_handler.py
backend/bedrock_impl/tests/: test_handler.py
backend/bedrock_impl/tests/unit/: test_handler.py
backend/langchain_impl/: pyproject.toml
backend/langchain_impl/sample_data/: test_data.yaml
backend/langchain_impl/src/: app.py  history.py  server.py  vector_stores.py
backend/langchain_impl/src/langchain_impl/: apis.py  app.py  history.py  server.py
backend/langchain_impl/tests/: conftest.py  test_generate_prompt_filters.py  test_history.py  test_ragdemon.py  test_server.py  test_splitting.py  test_vector_stores.py  test_web_scrape.py
src/: pyproject.toml
src/ragdemon/: app.py  history.py  server.py  web_scrape.py
src/ragdemon.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+63 files in other folders)
