[project]
name = "bedrock-impl"
version = "0.1.0"
description = ""
authors = [
    {name = "max-h1",email = "rfd6296@autuni.ac.nz"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "mypy-boto3-bedrock-agent-runtime (>=1.40.0,<2.0.0)",
    "mypy-boto3-dynamodb (>=1.40.10,<2.0.0)",
    "boto3 (>=1.40.12,<2.0.0)",
    "aws-lambda-powertools (>=3.19.0,<4.0.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]

[tool.poetry]
packages = [
  { include = "bedrock_impl", from = "src" }
]

[tool.poetry.dependencies]
bedrock_impl_local = { path = "src/bedrock_impl", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
flake8 = "^7.3.0"
datamodel-code-generator = "^0.33.0"

[tool.poetry.scripts]
export-requirements = "scripts.export_requirements:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"