[project]
name = "langchain-impl"
version = "0.1.0"
description = ""
authors = [
    {name = "max-h1",email = "rfd6296@autuni.ac.nz"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-openai (>=0.3.30,<0.4.0)",
    "langgraph (>=0.6.5,<0.7.0)",
    "langgraph-checkpoint-dynamodb (>=0.1.0,<0.2.0)",
    "botocore (>=1.40.12,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
flake8 = "^7.3.0"
pytest-asyncio = "^1.1.0"

